--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
-name=Adafruit INA219
-version=1.0.2
+name=Adafruit INA219_5A
+version=1.0.0
 author=Adafruit
 maintainer=Adafruit <info@adafruit.com>
 sentence=INA219 Current Sensor
